31-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Make sure that functions are not defined more than once in tca.php
	* Add record reindexing to CLI script and TCEmain hook
	* Record only indexable pages in URL log
	* Rewrite manual
	* Added file icons

29-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Change to TCEmain to use 'pagepath' extension to get path in FE
	* Record new url when page/record is renamed
	* Get rid of 'FE' option during extension installation
	* Update index on urllog table to search for urls faster
	* Get rid of old flexform options
	* Add a function to get mnoGoSearch API version
	* Remove unused CSS definition
	* Released version 2.0.2
	* Fixed empty search time
	* Released version 2.0.3

25-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Major refactoring and change of classes to use TS options and simplify flexform. Dropped TV renderer.
	* Renamed res/ to resources/
	* Move some classes toward MVC model
	* Made page browser more distinct on the page
	* Made TCEmain hook 4.3-compatible

21-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed template file to add more markers, look like Google, use pagebrowse extension
	* Fixed very low page rank
	* Fixed problem with t3lib_div::getDomainStartPage() not finding correct domain

15-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Added template file and more markers

14-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed problem: URL log was never emptied
	* Indexing configuration records now can exist only on regular pages
	* Fix: htdb:/ records did not show full URL in search results in certain cases
	* Added feature to limit search on htdb:/ domains
	* Fixed problem: TYPO3SEARCH_xxx was not working
	* Fixed problem: indexing configuration is still not on pages
	* Fixed problem: page 1 is always displayed in the results
	* Removed site title from search results
	* Added better label for indexing records

09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
